[package]
name = "mush"
version = "0.1.0"
authors = ["viperscape <chrisfgill@gmail.com>"]
license = "MIT"

[[bin]]
name = "demo"
path = "examples/demo.rs"



[dependencies]
uuid = "0.1"
rustc-serialize = "*"
conrod = "*"
elmesque = "*"
pistoncore-glutin_window = "0.1.0"
piston2d-opengl_graphics = "*"
piston2d-graphics = "*"
piston = "*"