[package]
name = "mush"
version = "0.1.2"
authors = ["viperscape <chrisfgill@gmail.com>"]
license = "Apache-2.0"
keywords = ["visual","gui","graph"]
repository = "https://github.com/PistonDevelopers/mush"
description = "Visual graph/dialogue editor"

[dependencies]
imgui = "0.0.13"
glium = { version = "0.16", default-features = true }
imgui-glium-renderer = "0.0.13"