[package]
name = "mush"
version = "0.1.3"
authors = ["viperscape <chrisfgill@gmail.com>"]
license = "Apache-2.0"
keywords = ["visual","gui","graph"]
repository = "https://github.com/PistonDevelopers/mush"
description = "Visual graph/dialogue editor"

[dependencies]
imgui = {git = "https://github.com/Gekkio/imgui-rs", version = "0.0.14-pre"}
glium = { version = "0.16", default-features = true }
imgui-glium-renderer =  {git = "https://github.com/Gekkio/imgui-rs", version = "0.0.14-pre"}
lichen = "0.2"